# ring_span

./: .clang-format  .clang-tidy  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: ci.yml
include/bdd/: ring_span.h
tests/: CMakeLists.txt  test_ring_span.cpp
